<?xml version="1.0"?>
<package format="3">
  <name>latsub</name>
  <version>0.0.1</version>
  <description>Latency subscriber as a composable component</description>
  <maintainer email="jh@todo.todo">jh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 컴포넌트용 의존성 추가 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

