<package format="3">
  <name>latpub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jh@todo.todo">jh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
